# libimu

./: .gitignore  CMakeLists.txt
src/libimu/: imu.c  imu.h  imu_algebra.c  imu_math.c
